--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "### An Overview of statistical Learning\n",
     "\n",
-    "**Supervised** statistical learning involves building a statistical model for predictiong, or estimating, an _output_ based on one or more _inputs_.\n",
+    "**Supervised** statistical learning involves building a statistical model for predicting, or estimating, an _output_ based on one or more _inputs_.\n",
     "\n",
-    "**Unsupervised** statistical learning, there are inputs but no supervsing inputs; nevertheless we can learn relationships and stucture from such data.\n",
+    "**Unsupervised** statistical learning, there are inputs but no supervising inputs; nevertheless we can learn relationships and stucture from such data.\n",
     "\n",
     "**_Wage Data:_**\n",
     "* We wish to understand the association between an employee's `age`, `education`, and calendar `year` on his `wage`.\n",
